syntax = "proto3";
package Protocol;

import "Enum.proto";

option csharp_namespace = "Google.Protobuf.Protocol";
option cc_enable_arenas = true;

message CharacterInfo
{
	uint64 characterId = 1;
	PlayerType playerType = 2;
	string name = 3;
	uint32 level = 4;
	int32 hp = 5;
	int32 exp = 6;
	uint32 attack = 7;
	uint32 mapId = 8;
}

message CreatureState
{
	float posX = 1;
	float posY = 2;
	BaseState baseState = 3;
	MoveDir moveDir = 4;
}

message Player
{
	uint64 playerId = 1;
	uint64 characterId = 2;
	PlayerType playerType = 3;
	string name = 4;
	CreatureState playerState = 5;
}